src/compiler/y.output
Grammar

    0 $accept: statement_list $end

    1 statement_list: statement '\n'
    2               | statement_list statement '\n'

    3 statement: NAME '=' expression
    4          | expression

    5 expression: expression '+' expression
    6           | expression '-' expression
    7           | expression '*' expression
    8           | expression '/' expression
    9           | '(' expression ')'
   10           | NUMBER
   11           | NAME


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 9
')' (41) 9
'*' (42) 7
'+' (43) 5
'-' (45) 6
'/' (47) 8
'=' (61) 3
error (256)
NAME (258) 3 11
NUMBER (259) 10


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
statement_list (14)
    on left: 1 2, on right: 0 2
statement (15)
    on left: 3 4, on right: 1 2
expression (16)
    on left: 5 6 7 8 9 10 11, on right: 3 4 5 6 7 8 9


state 0

    0 $accept: . statement_list $end

    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    statement_list  go to state 4
    statement       go to state 5
    expression      go to state 6


state 1

    3 statement: NAME . '=' expression
   11 expression: NAME .

    '='  shift, and go to state 7

    $default  reduce using rule 11 (expression)


state 2

   10 expression: NUMBER .

    $default  reduce using rule 10 (expression)


state 3

    9 expression: '(' . expression ')'

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 9


state 4

    0 $accept: statement_list . $end
    2 statement_list: statement_list . statement '\n'

    $end    shift, and go to state 10
    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    statement   go to state 11
    expression  go to state 6


state 5

    1 statement_list: statement . '\n'

    '\n'  shift, and go to state 12


state 6

    4 statement: expression .
    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 4 (statement)


state 7

    3 statement: NAME '=' . expression

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 17


state 8

   11 expression: NAME .

    $default  reduce using rule 11 (expression)


state 9

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | '(' expression . ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 18


state 10

    0 $accept: statement_list $end .

    $default  accept


state 11

    2 statement_list: statement_list statement . '\n'

    '\n'  shift, and go to state 19


state 12

    1 statement_list: statement '\n' .

    $default  reduce using rule 1 (statement_list)


state 13

    5 expression: expression '+' . expression

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 20


state 14

    6 expression: expression '-' . expression

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 21


state 15

    7 expression: expression '*' . expression

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 22


state 16

    8 expression: expression '/' . expression

    NAME    shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    expression  go to state 23


state 17

    3 statement: NAME '=' expression .
    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 3 (statement)


state 18

    9 expression: '(' expression ')' .

    $default  reduce using rule 9 (expression)


state 19

    2 statement_list: statement_list statement '\n' .

    $default  reduce using rule 2 (statement_list)


state 20

    5 expression: expression . '+' expression
    5           | expression '+' expression .
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 5 (expression)


state 21

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    6           | expression '-' expression .
    7           | expression . '*' expression
    8           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 6 (expression)


state 22

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    7           | expression '*' expression .
    8           | expression . '/' expression

    $default  reduce using rule 7 (expression)


state 23

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    8           | expression '/' expression .

    $default  reduce using rule 8 (expression)
